# cr-pr-adults

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
batch/: decoder.slurm  fetch_datasets.sh  motif_discrim.sh  motif_discrim.slurm  motif_rates.sh  pairwise_correlations.sh  retrieve_trials.sh  ssm-pretraining.sh  ssm-pretraining.slurm  ssm-training.sh  ssm-training.slurm
datasets/: sha512sums
docs/: installation.md  rivanna.md  stimuli.md
inputs/: all_units.tbl  behavior_data.tbl  bird_metadata.csv  decoder_tasks.txt  extracellular_scenes.yml  extracellular_songs.yml  recording_metadata.csv
notebooks/: behavior-pretraining.ipynb  behavior-probe.ipynb  behavior-ssm-summary.ipynb  behavior-stims.ipynb  decoder-summary.ipynb  figure1_acoustical-stats.ipynb  figure2_behavior-stats.ipynb  figure2_behavior-stims.ipynb  figure3_ephys-examples.ipynb  figure4-6_single-unit-stats.ipynb  figure5_pairwise-corr.ipynb  figure6_discriminability.ipynb  figure6_selectivity.ipynb  figure7-8_decoder-example.ipynb  figure7-8_decoder-summary.ipynb  figure8_invariance-examples.ipynb  motif-discrim-example.ipynb  motif-resp-example-figure.ipynb  pairwise-corr.ipynb  pilot-pooled-decoder.ipynb  single-unit-analysis.ipynb  spike-waveforms-figure.ipynb  supplemental_sequence-responses.ipynb
scripts/: amplitude-stats.py  arf_tools.py  core.py  decoder.py  extract_channel.py  filter_banks.py  filters.py  graphics_defaults.py  make_decoder_tasks.py  motif_discrim.py  motif_rates.py  motif_selectivity.R  pairwise_correlations.py  ssm-training.R  texture-stats.py  (+1 more)
