[build-system]
requires = ["setuptools>=58.1", "wheel"]

[tool.pytest.ini_options]
filterwarnings = [ "error::FutureWarning" ]

[tool.ruff]
target-version = "py37"
extend-exclude = ["attic"]

[tool.ruff.lint]
extend-select = [
  "B",   # flake8-bugbear
  "I",   # isort
  "PGH", # pygrep-hooks
  "RUF", # Ruff-specific
  "UP",  # pyupgrade
]
