[pep8]
ignore=E221,E501,E701

[flake8]
ignore = E221,E501,E701
max-line-length = 120
exclude = tests,venv,attic
max-complexity = 10

[metadata]
name = cr-pr-adults
author = Sam Moseley, Dan Meliza

[options]
zip_safe = false
packages = scripts
python_requires = >= 3.8
setup_requires =
    setuptools >=58.1.0
install_requires =
    melizalab-tools == 2023.09.07
    decide-analysis ~= 2.2.0
    scikit-learn >= 1.2.2
    statsmodels ~= 0.14.1
    pyspike @ git+https://github.com/melizalab/PySpike.git@5a3edeb77dbd626b41fca6f1cc9bee3041ce8a80
    matplotlib ~= 3.6
    seaborn ~= 0.12.0

